Phase 2: Core architecture hardening — registry, logging, proxy, deprecated API
- Remove duplicate FreeTTS initialization from CsmCommonProxy (already set in Csm static block)
- Standardize CsmRegistry.getBlock() to use namespaced keys consistently
- Change item registry from List to Map for proper duplicate detection by registry name
- Initialize logger eagerly with LogManager to prevent NPE before preInit()
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance() in CsmTab

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>